@@ -138,6 +138,7 @@ Glenn Twiggs
 Greg Nelson
 Greg Roodt
 Greg Schueler
+Grégoire Vatry
 Günther Kögel
 Harish Prabandham
 Haroon Rafique
