@@ -577,6 +577,10 @@
     <last>Schueler</last>
   </name>
   <name>
+    <first>Grégoire</first>
+    <last>Vatry</last>
+  </name>
+  <name>
     <first>Günther</first>
     <last>Kögel</last>
   </name>
